--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <body>
     <main>
       <h1>To-do list</h1>
+      <p>Add/remove tasks from a list.</p>
+      <p>Click on a specific task to mark it as "done".</p>
       <form onsubmit="addTask(event)">
         <input type="text" id="newTask" placeholder="Enter a new task here..." />
         <button>Add task</button>
